force-app/main/default/objects/LLC_BI__CFG_ConfigValue__c/LLC_BI__CFG_ConfigValue__c.object-meta.xml
<CustomObject>
    <description>Configuration Values allow nCino to have different processes across different products in the system by allowing for a many-to-many relationship</description>
    <label>CFG_ConfigValue</label>
    <nameField>
        <displayFormat>CFG-CV{00000000}</displayFormat>
        <label>CFG_ConfigValue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFG_ConfigValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>