force-app/main/default/objects/LLC_BI__CFG_ConfigValue__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is required. It is manually populated. It indicates the category of the configuration value. The combination of the category and the key is used to uniquely identify the configuration value.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Change Memo</fullName>
            </value>
            <value>
                <fullName>Change Product</fullName>
            </value>
            <value>
                <fullName>Copy Loan</fullName>
            </value>
            <value>
                <fullName>Delete_Feature_Enabled</fullName>
            </value>
            <value>
                <fullName>Delete_Versions_Allowed</fullName>
            </value>
            <value>
                <fullName>Deposit Stage</fullName>
            </value>
            <value>
                <fullName>Deposit Status</fullName>
            </value>
            <value>
                <fullName>Document Manager</fullName>
            </value>
            <value>
                <fullName>Entity_Check_Enabled</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Loan Stage</fullName>
                <default>true</default>
                <label>Loan Stage</label>
            </value>
            <value>
                <fullName>Loan Status</fullName>
            </value>
            <value>
                <fullName>Modification_Name_Format</fullName>
            </value>
            <value>
                <fullName>Original_Name_Format</fullName>
            </value>
            <value>
                <fullName>Relatives_To_Clone</fullName>
            </value>
            <value>
                <fullName>Renewal_Feature_Enabled</fullName>
            </value>
            <value>
                <fullName>Renewal_Fields_To_Clone</fullName>
            </value>
            <value>
                <fullName>Renewal_History_Available_String</fullName>
            </value>
            <value>
                <fullName>Renewal_History_In_Progress_String</fullName>
            </value>
            <value>
                <fullName>Renewal_History_Superceded_String</fullName>
            </value>
            <value>
                <fullName>Renewal_Name_Format</fullName>
            </value>
            <value>
                <fullName>Renewal_Stage_Superceded_String</fullName>
            </value>
            <value>
                <fullName>Renewal_Starting_Stage</fullName>
            </value>
            <value>
                <fullName>Renewal_Starting_Status</fullName>
            </value>
            <value>
                <fullName>Renewal_Status_Deleted_String</fullName>
            </value>
            <value>
                <fullName>Renewal_Status_Superceded_String</fullName>
            </value>
            <value>
                <fullName>Renewal_Supported</fullName>
            </value>
            <value>
                <fullName>Roles_For_Loan_Deletion</fullName>
            </value>
            <value>
                <fullName>Roles_For_Loan_Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>