force-app/main/default/objects/LLC_BI__CFG_ConfigValue__c/fields/LLC_BI__Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value__c</fullName>
    <description>This field is required. It is manually populated. It indicates the value to be used within the nCino codebase for the configuration value.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>