force-app/main/default/objects/LLC_BI__CFG_ConfigValue__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Category__c</columns>
    <columns>LLC_BI__fieldValue__c</columns>
    <columns>LLC_BI__Key__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>